--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 --extra-index-url https://download.pytorch.org/whl/cpu
-fastapi
-uvicorn
-transformers
-torch
-httpx
+fastapi==0.110.0
+pytest==8.1.1
+pydantic==2.6.3
+uvicorn==0.28.0
+transformers==4.38.2
+httpx==0.27.0
+torch==2.2.1
+
+
